# SchoolProject

./: README.md  bunnyshell.yaml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: manage.py  pyproject.toml
backend/EquipApp/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
backend/EquipApp/migrations/: 0002_alter_equipment_category.py  0003_alter_equipment_category.py  0004_alter_equipment_category.py  0008_alter_equipquery_sch_rep.py  0011_alter_equipment_schedule.py  0013_alter_equipquery_sch_rep.py  0014_remove_equipquery_sch_rep_equipquery_supply_manager.py  0015_alter_equipquery_supply_manager.py
backend/LectureApp/: forms.py  models.py  utils.py  views.py
backend/LectureApp/migrations/: 0001_initial.py  0002_alter_lecture_target_audience.py  0003_alter_lecture_image.py
backend/RoomApp/: forms.py  models.py  urls.py  utils.py  views.py
backend/RoomApp/migrations/: 0001_initial.py  0005_alter_room_schedule.py  0008_remove_roomquery_sch_rep_roomquery_supply_manager.py
backend/SchoolProject/: asgi.py  settings.py  urls.py  wsgi.py
backend/main/: admin.py  client.py  forms.py  models.py  urls.py  utils.py  views.py
backend/main/migrations/: 0002_school_sign_schrep_sign.py  0004_school_sign_image_schrep_sign_image.py  0006_school_sign_password_schrep_sign_password.py  0007_alter_school_description.py  0009_schoolrepresentative_remove_schrep_school_and_more.py
backend/main/templatetags/: main_tags.py
backend/server/EquipApp/: apps.py  models.py  utils.py  views.py
config/backend/: .env
(+146 files in other folders)
