[tool.poetry]
name = "schoolproject"
version = "0.1.0"
description = ""
authors = ["MrEndor <mrendorer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-braces = "^1.15.0"
docxtpl = "^0.16.7"
httpx = "^0.25.1"
django-scheduler = "^0.10.1"
schedule = "^1.2.1"
docker = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
