[tool.poetry]
name = "resources"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
#aspose-words = "22.10.0"
boto3 = "1.26.8"
botocore = "1.29.8"
dj-database-url = "1.0.0"
Django = "4.1.3"
django-heroku = "0.3.1"
django-storages = "1.13.1"
docxcompose = "1.3.6"
docxtpl = "0.16.4"
et-xmlfile = "1.1.0"
gunicorn = "20.1.0"
Jinja2 = "3.1.2"
jmespath = "1.0.1"
lxml = "4.9.3"
MarkupSafe = "2.1.1"
openpyxl = "3.0.10"
Pillow = "9.3.0"
psycopg2 = "2.9.5"
python-dateutil = "2.8.2"
python-docx = "0.8.11"
s3transfer = "0.6.0"
schedule = "1.1.0"
six = "1.16.0"
sqlparse = "0.4.3"
tzdata = "2022.6"
urllib3 = "1.26.12"
whitenoise = "6.2.0"
httpx = "^0.23.3"
django-braces = "^1.15.0"
django-split-settings = "^1.2.0"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
